src/test/resources/acceptance/reject/assignmentNoSemicolon.ul
boolean bar ()
{
    id1 = 5
}
